test/asm/block-comment-termination-error.err
ERROR: block-comment-termination-error.asm(1):
    Unterminated block comment
ERROR: block-comment-termination-error.asm(1):
    syntax error, unexpected newline
error: Assembly aborted (2 errors)!
